# spotifydown-rust

./: .gitmodules  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  model.rs  service.rs
